--- a/iOS_Swift_ColorPicker_Storyboard/FirstStoryboard.storyboard
+++ b/iOS_Swift_ColorPicker_Storyboard/FirstStoryboard.storyboard
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="nSU-7q-fM3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7UH-hL-ZNG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="S6l-bS-LM2">
+            <objects>
+                <navigationController id="7UH-hL-ZNG" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="T90-Kq-Kxx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="nSU-7q-fM3" kind="relationship" relationship="rootViewController" id="F7b-M1-R9A"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AHe-8k-Pdz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-250" y="392"/>
+        </scene>
         <!--First View Controller-->
         <scene sceneID="hnG-Tk-Tjc">
             <objects>
@@ -34,6 +50,7 @@
                             <constraint firstAttribute="centerX" secondItem="uci-GV-QAk" secondAttribute="centerX" id="ra8-ge-XlI"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="AXQ-A2-MV3"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8qU-Te-iLN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
